manifests/ingress-27.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "diaggarw-13f5"
    labels:
        app: "diaggarw-13f5"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: diaggarwa7e0-diaggarw-13f5.8fd377fc1d604524b4e1.southindia.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "diaggarw-13f5"
                servicePort: 8080
